--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,16 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-32x32.png">
   <link rel="manifest" href="./assets/site.webmanifest">
-  <link href="https://fonts.googleapis.com/css2?family=WindSong:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=WindSong:wght@500&amp;display=swap" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 
 <body class="mat-typography">
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
